added more bootstrap features

--- a/index.html
+++ b/index.html
@@ -5,17 +5,15 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <meta charset="utf-8">
     <head>
+        
+        <div class="container">
+            <div class="jumbotron">
+              <h1>Bootstrap Practice</h1>
+              <p>Sed finibus sapien luctus pretium interdum. Etiam accumsan nibh neque. Integer congue magna orci, vitae suscipit mi tincidunt quis. Suspendisse fringilla, orci eu aliquet ultricies, libero ipsum maximus massa, et mollis leo massa sed felis. Suspendisse molestie elit non mollis gravida.</p>
+            </div>
+            ...
+          </div>
 
-        <body>
-  <div class="container">
-    <div class="jumbotron">
-      <h1>Bootstrap Practice</h1>
-      <p>Sed finibus sapien luctus pretium interdum. Etiam accumsan nibh neque. Integer congue magna orci, vitae suscipit mi tincidunt quis. Suspendisse fringilla, orci eu aliquet ultricies, libero ipsum maximus massa, et mollis leo massa sed felis. Suspendisse molestie elit non mollis gravida.</p>
-    </div>
-    ...
-  </div>
-</body>
-  
         <title>Bootstrap Practice</title>
         <link href=https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"" rel="stylesheet" type="text/css">
       </head>
@@ -31,32 +29,44 @@
     <p>Sed finibus sapien luctus pretium interdum. Etiam accumsan nibh neque. Integer congue magna orci, vitae suscipit mi tincidunt quis. Suspendisse fringilla, orci eu aliquet ultricies, libero ipsum maximus massa, et mollis leo massa sed felis. Suspendisse molestie elit non mollis gravida.</p>
     <h2>Lorem Ipsum</h2>
     <ul>
-      <li>Lorem ipsum dolor sit amet</li>
-      <li>Consectetur adipiscing elit</li>
-      <li>Integer finibus</li>
-      <li>Nisl tempus semper semper</li>
-      <li>Purus nisl hendrerit tellus</li>
+
+        <div class="card">
+            <div class="card-body">
+              <h2>class="bg-success">Morbi Lacinia Mollis Tortor</h2>
+              <ul>
+                <li>Lorem ipsum dolor sit amet</li>
+                <li>Consectetur adipiscing elit</li>
+                <li>Integer finibus</li>
+                <li>Nisl tempus semper semper</li>
+                <li>Purus nisl hendrerit tellus</li>
+              </ul>
+            </div>
+
     </ul>
-    <h2>Et Consequat Magna</h2>
-    <ul>
-      <li>Orci ut velit</li>
-      <li>Pellentesque cursus justo</li>
-      <li>In felis condimentum cursus</li>
-    </ul>
-    <ul>
-      <li>Proin dignissim lectus enim</li>
-      <li>Eu bibendum mauris euismod in</li>
-      <li>Morbi dictum</li>
-      <li>Ex et malesuada pellentesque</li>
-    </ul>
-    <h2>Morbi Lacinia Mollis Tortor</h2>
-    <ul>
-      <li>A sodales elit tempor ut</li>
-      <li>Ut elit augue</li>
-      <li>Imperdiet eu est faucibus</li>
-      <li>Tristique hendrerit mi</li>
-      <li>Proin in ex lectus</li>
-      <li>Donec accumsan in nisi non ultricies</li>
+   
+    <div class="card">
+        <div class="card-title">
+            <h2>Et Consequat Magna</h2>
+        </div>
+        <div class="card-body">
+          <ul>
+            <li class="bg-danger">A sodales elit tempor ut</li>
+            <li>Pellentesque cursus justo</li>
+            <li>In felis condimentum cursus</li>
+          </ul>
+          <ul>
+            <li class="bg-danger">A sodales elit tempor ut</li>
+        <li>Ut elit augue</li>
+        <li>Imperdiet eu est faucibus</li>
+        <li class="bg-danger">Tristique hendrerit mi</li>
+        <li>Proin in ex lectus</li>
+        <li class="bg-danger">Donec accumsan in nisi non ultricies</li>
+        </div>
+        <div class="card-footer">
+          <p>A footer for this specific card</p>
+        </div>
+   </div>
+      
     </ul>
   </body>
 </html>
